Vac weekly updates

--- a/content/updates/2024-11-11.md
+++ b/content/updates/2024-11-11.md
@@ -16,8 +16,29 @@ draft: false
   - Completed simulations for staggered message handling (still need to analyze results)
 
 ### vac:tke:
+- `admin`
+  - 6 CC days off
+  - prepared for DevCon and travelled to Bangkok
+  - Devcon schedule planning
+- `vac:tke:nomos:intro-base-layer-economy:tx-fees`
+  - concluded the code for the ABM
+- `vac:tke:ift:tokenomics-research-forum:ve3`
+  - working on the blogpost on ve(3,3)
+- `vac:tke:status:aura-incentives:xp-program`
+  - worked on existing codebase to simulate AURA; identified several potential next steps here
+  - worked on theory for AURA
+- `vac:tke:ift:tokenomics-research-forum:XP`
+  - worked on research for blog on XP (related to Aura)
+- `vac:tke:ift:based:adhoc-support`
+  - Working on Vojtech's request. Meeting him on Tuesday.
 
 ### vac:dst:
+- `waku:waku-evaluation:regression-testing`:
+    - Repeat perf simulations with 1 waku node per VM
+    - Repeat perf simulations with various waku node per VM
+- `admin/misc`:
+    - 1 CC has flight to Thailand from Thursday
+    - 1 CC on Sick leave
 
 ### vac:qa:
 - `waku:status-go-functional-testing-2024q4:migrate-to-status-backend`
@@ -83,6 +104,14 @@ draft: false
     - Finished implementing upgradability https://github.com/vacp2p/staking-reward-streamer/pull/73
 
 ### vac:nim:
+- `vac:nim:ift:nim_ide_tooling_2024q4`
+ - Removes pcre dep #259 https://github.com/nim-lang/langserver/pull/259
+- `vac:nim:ift:nimble_2024q4`
+	- Fixes #1277 Tagged versions (i.e. #head) behaves like any except when matched against another tag #1279 https://github.com/nim-lang/nimble/pull/1279
+	- bumps setup-nim-action #1280 https://github.com/nim-lang/nimble/pull/1280
+  - (WIP) Fixes an issue where --requires didnt work for adding nim constraints #1282 https://github.com/nim-lang/nimble/pull/1282
+	- Improves sat error messages. Making it easier to spot conflicting deps #1281 (https://github.com/nim-lang/nimble/pull/1281)
+  - Started: Enumerate all versions upfront
 
 ### vac:rfc:
 - `ift:rfc:waku:updates-of-mature-waku-rfcs-2024q4`
@@ -106,5 +135,6 @@ draft: false
 - `vac:nes:state-separation-architecture-poc:vm`
     - Implemented ZKVM module.
     - Tested ZKVM module.
+
 
 
