--- a/content/updates/2024-11-18.md
+++ b/content/updates/2024-11-18.md
@@ -28,6 +28,18 @@ draft: false
   - Worked on Vojtech's request. Met him on Tuesday.
 
 ### vac:dst:
+- `vac:dst:vac:libp2p-evaluation:regression-testing` (November):
+    - Rerun simulations for version 1.7.0 
+    - Run simulations for version 1.7.1
+    - Not finished, analysis pending. Compiled and run succesfully so far.
+- `admin/misc`:
+    - 1 CC on Devcon SEA
+    - 1 CC on Sick leave
+    - Meeting with Nomos to talk about future Mixnet work
+    - Meeting with Waku to talk about 
+        - FURPS
+        - Dashboard and public reports
+        - Status-d and so on
 
 ### vac:qa:
 - `waku:status-go-functional-testing-2024q4:migrate-to-status-backend`
@@ -87,6 +99,16 @@ draft: false
             - Potential MP Prediction
 
 ### vac:nim:
+- `vac:nim:ift:nim_ide_tooling_2024q4`
+	- implements extension/runTask #261 https://github.com/nim-lang/langserver/pull/261
+	- (Needs to be completed, a package fails) Bumps nimble v0.16.3 #24437
+ https://github.com/nim-lang/Nim/pull/24437
+- `vac:nim:ift:nimble_2024q4`
+	- Complete Nim Binaries #1283 https://github.com/nim-lang/nimble/pull/1283
+	- sat and checksums are now git submodules #1285 https://github.com/nim-lang/nimble/pull/1285
+  - bump version to 0.16.3 #1286
+ https://github.com/nim-lang/nimble/pull/1286
+  - nimble release v0.16.3
 
 ### vac:rfc:
 - `admin/misc`
