--- a/content/updates/2024-11-25.md
+++ b/content/updates/2024-11-25.md
@@ -35,6 +35,9 @@ draft: false
   - Discussion on potential pivot re: AI agaents
 
 ### vac:dst:
+- `admin/misc`:
+    - 1 CC OOO entire week
+    - 1 CC on Sick leave
 
 ### vac:qa:
 Last week:
@@ -105,6 +108,9 @@ Last week:
     - finished the implementation of streamed rewards https://github.com/vacp2p/staking-reward-streamer/pull/74
 
 ### vac:nim:
+- `vac:nim:ift:nimble_2024q4`
+  - Enumerate tagged versions upfront #1289 https://github.com/nim-lang/nimble/pull/1289
+  - WIP cache enumerated packages
 
 ### vac:rfc:
 - `ift:rfc:waku:updates-of-mature-waku-rfcs-2024q4`
@@ -143,5 +149,4 @@ This week:
 - `vac:nes:state-separation-architecture-poc:sequencer`
     - [Sequencer core structures](https://github.com/vacp2p/nescience-testnet/pull/24/commits/6194816d153915cba437b24f749819ec58aad6b3).
     - [Sequencer transaction submitting workflow](https://github.com/vacp2p/nescience-testnet/blob/main/sequencer_core/src/transaction_mempool.rs).
-
 
