--- a/content/updates/2024-12-02.md
+++ b/content/updates/2024-12-02.md
@@ -46,8 +46,15 @@ draft: false
   - caught up with team
 
 ### vac:dst:
+- `admin/misc`:
+    - 1 CC OOO until Wednesday
+    - 1 CC ooo whole week
+- `vac:dst:vac:libp2p-evaluation:regression-testing` (November):
+    - [Nimlibp2p 1.7.0 report](https://www.notion.so/Nim-libp2p-v1-7-0-regression-testing-November-2024-1518f96fb65c802883ebcfaa1b8b851f)
+    - [Nimlibp2p 1.7.1 report](https://www.notion.so/Nim-libp2p-v1-7-1-regression-testing-November-2024-1518f96fb65c80359615e646eaa)
 
 ### vac:qa:
+
 - `waku:interop-testing-2024q4:maintenace`
 	- Fixed [light-protocols tests](https://github.com/waku-org/waku-interop-tests/pull/91)
 - `ift:projects-qa-strategy-2024q4:status`
@@ -126,8 +133,32 @@ draft: false
         - https://github.com/vacp2p/staking-reward-streamer/pull/71
 
 ### vac:nim:
+- `vac:nim:ift:nim_ide_tooling_2024q4`
+	- Only send lsp status updates when the lsp status changes #263 (https://github.com/nim-lang/langserver/pull/263)
+- `vac:nim:ift:nimble_2024q4`
+ - WIP Nim CI passing with latest version
+ - Fixes #1294 --useSystemNim shouldnt download nim #1295 (https://github.com/nim-lang/nimble/pull/1295)
+ - MaximumTaggedVersions is now an option. Fixes a Nim CI issue #1293 (https://github.com/nim-lang/nimble/pull/1293)
+ - Locally caches tagged packages #1292 (https://github.com/nim-lang/nimble/pull/1292)
+ - WIP Fixes an issue in SAT Core that was brought up when enumerating 
+ - New repo: https://github.com/nim-lang/setup-nimble-action 
 
 ### vac:rfc:
+ - `ift:rfc:waku:updates-of-mature-waku-rfcs-2024q4`
+    - Closed pr for Waku-LightPush pr as 19/WAKU2-LIGHTPUSH will be replaced by new rfc started on waku specs - https://github.com/vacp2p/rfc-index/pull/112
+    - Continued work on 15/WAKU-BRIDGE, should be ready for feedback this week.
+- `ift:rfc:vac:rfc-culture-establishment-2024q4`
+    - Reading and exploring how we can integrate FURPS into RFC Culture (https://forum.vac.dev/t/furps-learning-a-new-language-for-software-requirements/395)
+    - Updating RFC homepage on Notion
+    - Review https://www.notion.so/Improve-RFC-Culture-Ideas-5abfd49d7b604e9594bdf534408472ca to see what else we can implement: Specification validation (edge cases, how specific, etc.)
+This week:
+- `ift:rfc:waku:updates-of-mature-waku-rfcs-2024q4`
+    - Work on RFC updates, 15/WAKU-BRIDGE. 
+    - 14/WAKU-MESSAGE and 13/WAKU-STORE have been previously worked. Will revisit - https://github.com/vacp2p/rfc-index/pull/20
+    - Touchbase with Waku team (together with Jimmy) to see how and where we can improve (postponed due to Thanksgiving).
+    - Review https://www.notion.so/Improve-RFC-Culture-Ideas-5abfd49d7b604e9594bdf534408472ca to see what else we can implement: Codebase updates.
+- `ift:rfc:vac:rfc-culture-establishment-2024q4`
+    - Create AA informational post on Vac forum
 
 ### vac:nes:
 - `vac:state-separation-architecture-poc:crypto-module`
@@ -142,6 +173,6 @@ draft: false
 - `vac:state-separation-architecture-poc:sequencer`
     - [Sequencer core structures implementation](https://github.com/vacp2p/nescience-testnet/pull/24).
     - [Sequencet full implementation](https://github.com/vacp2p/nescience-testnet/pull/27).
-    - Sequencer block generation testi
+    - Sequencer block generation test
 
 
