vac weekly update

--- a/content/updates/2025-01-13.md
+++ b/content/updates/2025-01-13.md
@@ -72,6 +72,26 @@ draft: false
     - Iterate on tool idea
 
 ### vac:sc:
+- `admin/misc`
+    - Updated 2025 commitments and roadmaps items
+        - https://github.com/vacp2p/roadmap/pull/65
+    - Set up repository and initial issues for staking demo app
+        - https://github.com/vacp2p/staking-demo-app
+- `status:2025q1-staking-protocol-refinement:refactoring`
+    - [Isolate Multiplier Point Math · Issue #107 · vacp2p/staking-reward-streamer](https://github.com/vacp2p/staking-reward-streamer/issues/107)
+        - PR: [refactor(RewardStreamerMP): extract MP and Stake mathematical formula… by 3esmit · Pull Request #109 · vacp2p/staking-reward-streamer · GitHub](https://github.com/vacp2p/staking-reward-streamer/pull/109)
+- `status:2025q1-staking-protocol-docs:finish-v1-docs`
+    - [Document Mathematical Formulas · Issue #56 · vacp2p/staking-reward-streamer](https://github.com/vacp2p/staking-reward-streamer/issues/56)
+        - Merged: [chore(docs): mathspec v1 by 3esmit · Pull Request #67 · vacp2p/staking-reward-streamer · GitHub](https://github.com/vacp2p/staking-reward-streamer/pull/67)
+- `ift:2025q1-sc-learnup-sessions:2025-01`
+    - Organized learnup session, recording available in our recording library
+- `status:2025q1-base-chain-integration:snt-bridge-token`
+    - Discussed strategy for SNT on base with Status and Finance
+        - Awaiting final feedback for what version should be used
+- `codex:2025q1-formal-verification:finish-current-rules`
+    - Meeting with Codex and Certora
+        - Codex to implement necessary function for Certora to implement solvency property
+    - Also discussed review of rules and additional properties for staking protocol
 
 ### vac:acz:
 - `ift:2025q1-de-mls-multi-admin:blogpost-de-mls-over-waku`
