--- a/content/updates/2025-01-20.md
+++ b/content/updates/2025-01-20.md
@@ -104,6 +104,39 @@ draft: false
     - Deployed 3x machines each with a shared 1PiB allocation of storage for Codex to use
 
 ### vac:sc:
+- `status:2025q1-staking-protocol-refinement:bug-fixing`
+    - created PR to fix the accrued rewards after staking and unstaking multiple times https://github.com/vacp2p/staking-reward-streamer/pull/110
+- `status:2025q1-base-chain-integration:snt-bridge-token`
+    - Deployed SNT on base chain
+        - Mainnet
+            - https://basescan.org/address/0x662015EC830DF08C0FC45896FaB726542e8AC09E#code
+        - Sepolia
+            - https://sepolia.basescan.org/address/0xfDB3b57944943a7724fCc0520eE2B10659969a06#readContract
+- `status:2025q1-base-chain-integration:communities-contracts-deployment`
+    - Deployed communities contracts on basechain
+        **BASE SEPOLIA ADDRESSES**
+
+        **CommunityTokenDeployer**:  https://sepolia.basescan.org/address/0x7Ff554af5b6624db2135E4364F416d1D397f43e6
+
+        **CommunityOwnerTokenRegistry**: https://sepolia.basescan.org/address/0x9C84f9f9970B22E67f1B2BE46ABb1C09741FF7d7
+
+        **CommunityOwnerTokenFactory**: https://sepolia.basescan.org/address/0x0B5DAd18B8791ddb24252B433ec4f21f9e6e5Ed0
+
+        **CommunityMasterTokenFactory**: https://sepolia.basescan.org/address/0x35Cded11D75cC10d38ED4456b8caDC9F36E85E42
+
+        **BASE MAINNET ADDRESSES**
+
+        **CommunityTokenDeployer**:  https://basescan.org/address/0x898331B756EE1f29302DeF227a4471e960c50612
+
+        **CommunityOwnerTokenRegistry**: https://basescan.org/address/0x744Fd6e98dad09Fb8CCF530B5aBd32B56D64943b
+
+        **CommunityOwnerTokenFactory**: https://basescan.org/address/0x650AF3C15AF43dcB218406d30784416D64Cfb6B2
+
+        **CommunityMasterTokenFactory**: https://basescan.org/address/0x76352764590378011CAE677b50110Ae02eDE2b62
+- `status:2025q1-staking-protocol-docs:finish-v1-docs`
+    - Updated docs about multiplier points
+        - https://github.com/vacp2p/staking-reward-streamer/pull/112
+    - Wrote docs about reward system
 
 ### vac:acz:
 - `ift:2025q1-de-mls-multi-admin:blogpost-de-mls-over-waku`
@@ -131,6 +164,18 @@ draft: false
     - 1 cc is ooo for 1 day 
 
 ### vac:nim:
+- `ift:2025q1-nim-ide-tooling`
+    - Bumps version 1.4.0 https://github.com/nim-lang/vscode-nim/pull/131
+    - Fixes an issue where the debugger wouldnt start for some subfolders https://github.com/nim-lang/vscode-nim/pull/133
+    - Adds the concept of idleFile a file https://github.com/nim-lang/langserver/pull/280
+    - Improves process handling https://github.com/nim-lang/langserver/pull/282
+    - bump version 1.8.0 https://github.com/nim-lang/langserver/pull/283
+    - https://github.com/nim-lang/langserver/pull/283
+    - Disables i686 https://github.com/nim-lang/langserver/pull/284
+    - Fix ci binaries https://github.com/nim-lang/langserver/pull/285
+    - Fix ci universal https://github.com/nim-lang/langserver/pull/286
+    - Fixes lockfile #Fixes https://github.com/nim-lang/nimble/issues/1332 https://github.com/nim-lang/langserver/pull/287
+    - Release
 
 ### vac:rfc:
 - `waku:2025q1-rfc-iterations`
