vac weekly and monthly update

--- a/content/monthly/2024-12.md
+++ b/content/monthly/2024-12.md
@@ -292,19 +292,61 @@ draft: false
 
 ### RFC
 #### highlights
+- Completed the current editing iteration for various Waku RFCs
+
 #### report
+- `ift:rfc:vac:rfc-culture-establishment-2024q4`
+    - Account Abstraction forum post: https://www.notion.so/Account-Abstraction-Forum-post-1708f96fb65c80cf8739f8ddfc9118b6 
+    - Drew conclusions for the plan and added more details in the Notion, relevant to the next steps: https://www.notion.so/Improve-RFC-Culture-Ideas-5abfd49d7b604e9594bdf534408472ca 
+- `ift:rfc:waku:updates-of-mature-waku-rfcs-2024q4`
+    - Finished 14/WAKU2-MESSAGE - https://github.com/vacp2p/rfc-index/pull/120
+    - Finished 12/WAKU2-FILTER - https://github.com/vacp2p/rfc-index/pull/119
+    - Finished 15/WAKU-BRIDGE - https://github.com/vacp2p/rfc-index/pull/113
+    - Finished 13/WAKU2-STORE (new update) - https://github.com/waku-org/specs/pull/48
+- `ift:rfc:vac:rfc-index-maintenance-2024q4`
+    - There was an issue that prevented new RFCs from being listed. Fixed with Docusaurus update
+    - Fixed sds.md markdown errors - https://github.com/vacp2p/rfc-index/pull/115
+- `ift:rfc:status:status-specs-to-rfc-index-migration`
+    - Finished Status old RFCs PR - https://github.com/vacp2p/rfc-index/pull/109 (Hanno still needs to review)
 
 
 ### Nim
 #### highlights
-
 - Smarter Dependency Resolution The SAT solver now falls back to a previous package version if the latest one is unsatisfiable.
 - Improved Nim Version Selection Favors the user’s system Nim version if it meets the package requirements.
 - Caching & Misc Improvements Caches tagged packages for faster lookups.Includes various fixes and performance improvements.
-
 - Nimble Task integration (run tasks from the Extension)
 - Nim check is now the default linting backend (you can revert to nimsuggest chk by setting "nim.useNimCheck": false). This should help to reduce nimsuggest issues as nimsuggest chk is one of the most extensive commands.
 
 ### Nescience
 #### highlights
+- Started the advanced phase of implementing the sandboxed testnet.
+- Focused on node workflow and interaction with other components.
+- Research wise, focused on solving different issues as nullifier, proof aggregation, and UTXO false flags; moreover we focused on fixing some components of the cryptography module such as constants and generators.
+- Defined the metrics for the testnet and run scenarios to test the architecture.
+
 #### report
+- `vac:nes:state-separation-architecture-poc`
+    - Overview:
+        - Implemented the node core structures, the node account interaction, the node sequencer interaction, the node transaction workflow, and the node rpc.
+        - Defined a set of metrics for testing and implemented 5 sub-scenarios to test the basic behaviour of the architecture, and 2 complex scenrios to check more sophisticated behaviour.
+        - Tested and analyzed the results of the testnet and output a documentation to represent the initial findings and future fixes.
+        - Defined constants for NSSA key protocol, updated the generation of generators for the cryptography module, and defined when to use Poseidon and secp256k1.
+        - Digged into some issues faced during the previous tasks and worked on initial solutions for nullifier, proof aggregation, and UTXO false flags.
+    - List of deliverables (ordered as in [task management](https://www.notion.so/1158f96fb65c80a2aeb5f400fff2a8e4?v=1158f96fb65c81bc8833000c8957b942&pvs=4)):
+        - [Node core structures and account management implementation](https://github.com/vacp2p/nescience-testnet/pull/29).
+        - [Node sequencer interaction implementation](https://github.com/vacp2p/nescience-testnet/pull/30).
+        - [Node core tests](https://github.com/vacp2p/nescience-testnet/pull/31).
+        - [ Node transaction workflow implementation](https://github.com/vacp2p/nescience-testnet/pull/32).
+        - [Sub-scenarios rpc implementation](https://github.com/vacp2p/nescience-testnet/pull/32).
+        - [Complex scenarios implementation](https://github.com/vacp2p/nescience-testnet/pull/36).
+        - [Constants and generators fix](https://www.notion.so/Work-on-constants-1528f96fb65c80a198baecb46869b12d).
+        - [Nullifier issue and potential solutions](https://www.notion.so/Nullifier-issue-1528f96fb65c80458ce1fa57aa964d60).
+        - [Proof aggregation issue and potential solution](https://www.notion.so/Proof-aggregation-issue-1528f96fb65c80de9b96ed204fb0e4ca).
+        - [UTXOs false flags solution](https://www.notion.so/UTXOs-false-flag-1528f96fb65c807eb3fbc96b8c5fd77f).
+        - [Metrics definition for testnet](https://www.notion.so/Testnet-metrics-15f8f96fb65c80b1b1dcdcbc923b48a8).
+        - [Testner initial results and analysis](https://www.notion.so/Testnet-initial-results-analysis-16f8f96fb65c8067b725ff87ffe81dd2).
+    - Completed tasks (big tasks):
+        - `vac:nes:state-separation-architecture-poc:testnet-node`
+        - `vac:nes:state-separation-architecture-poc:tesnet-support`
+
