--- a/content/updates/2025-01-27.md
+++ b/content/updates/2025-01-27.md
@@ -28,6 +28,32 @@ draft: false
     - 1 CC 1 days off
 
 ### vac:tke:
+- `admin`
+  -  3 CC days off
+- `vac:tke:nomos:base-econ-model:three-markets`
+  - readings and discussions about Nomos Bedrock and Services
+- `vac:tke:nomos:base-econ-model:style-guidelines`
+  - finished adapting all documents in Nomos to their styling guidelines
+- `vac:tke:nomos:base-econ-model:eth-data`
+  - Finished data scraping
+  - Finished modeling of ethereum gas and block space
+  - Wroked towards model of ethereum blobspace
+- `vac:tke:codex:cdx-incentive-mechanisms:minor-things`
+  - incorporated TKE and Codex feedback into the CDX tool
+- `vac:tke:codex:cdx-incentive-mechanisms:monitoring`
+  - implemented tools to monitor the AMM
+- `vac:tke:status:karma-incentives:staking-demo`
+  - Building the prototype in cooperation with SC team.
+- `vac:tke:ift:based:advisory:adHoc-support`
+  - presented data analysis we have on pump.fun for their points system
+  - Started working towards further refinement of points
+  - Started working towards research doc on AI-related strategy
+- `vac:tke:ift:catsfishing:simulations-and-release:tokenomics`
+  - Answered questions from legal
+- `vac:tke:ift:tokenomics-research-forum:ai-landscape`
+  - Research on verifiable and distributable compute
+- `vac:tke:ift:tokenomics-research-forum:points-system`
+  - Finished blogpost on this (pls review!)
 
 ### vac:qa:
 - `waku:2025q1-direct-message-reliability-testing:rate-limit`
@@ -145,4 +171,12 @@ draft: false
     - Updating the roadmap with tasks and fixes.
 
 ### vac:nes:
+- `state-separation-architecture-poc:flags`
+  - Wrote a [document](https://www.notion.so/Analysing-the-Current-Method-for-FFU-Sync-Mechanism-final-1858f96fb65c80ecb5dfeee64593edce) about the current approach for private invocation of public smart contracts
+  - Wrote a [document](https://www.notion.so/Analysing-the-roll-up-based-approach-sync-mechanism-final-1868f96fb65c80068694f1cbd1cec21a) discussing issues with improving the current rollup style approach of private invocation of public smart contracts using privacy flags for UTXOs.  
+- `state-separation-architecture-poc:chain`
+     - chain state [tasks](https://github.com/vacp2p/nescience-testnet/pull/42).
+     - PR reviews.
+     - RPC sequencer error handing [merge request](https://github.com/vacp2p/nescience-testnet/pull/40).
+     - Tree root logical constraint on sequencer [merge request](https://github.com/vacp2p/nescience-testnet/pull/41).
 
