Vac monthly - add nim

--- a/content/monthly/2025-01.md
+++ b/content/monthly/2025-01.md
@@ -248,6 +248,9 @@ draft: false
 
 ### Nim
 #### highlights
+- New release of the vs-code extension and the nimlangserver
+- Experimental support for macro and arc expansion on hover
+- Initial support for `nim check` as linter (as opposed to `nimsuggest chk`)
 
 ### Nescience
 #### highlights
