--- a/content/updates/2025-02-17.md
+++ b/content/updates/2025-02-17.md
@@ -109,6 +109,14 @@ draft: false
     - Update/real world tests: https://www.notion.so/Raw-bandwidth-sidecar-Update-19d8f96fb65c80deb38ad95614d3cf34
 
 ### vac:sc:
+- `status:2025q1-staking-protocol-refinement:bug-fixing`
+  - experimented with time weighted rewards contract https://github.com/vacp2p/staking-reward-streamer/commits/test-rewards-with-mps/
+  - started new final implementation of the rewards algorithm https://github.com/vacp2p/staking-reward-streamer/pull/121
+    - Concluded compromise solution with Status Network
+    - With this in place, finalization of protocol v1 can happen
+- `ift:2025q1-security-audits:contest-participation`
+    - Audited RAAC protocol as per contest
+    - 11 findings so far
 
 ### vac:acz:
 - `ift:2025q1-de-mls-multi-admin:waku-node-connection`
