Vac weekly and monthly

--- a/content/updates/2025-02-24.md
+++ b/content/updates/2025-02-24.md
@@ -164,11 +164,62 @@ draft: false
     - Contest has concluded
 
 ### vac:acz:
+- `ift:2025q1-zerokit-v0-7:release`
+    - Prepare readme for current version of zerokit and also update utils and rln part as well [PR](https://github.com/vacp2p/zerokit/pull/284)
+    - Reviewed the [PR](https://github.com/vacp2p/zerokit/pull/284).
+- `ift:2025q1-zerokit-v0-7:rln-cli`
+    - Code review for [PR](https://github.com/vacp2p/zerokit/pull/280)
+    - Kept the old RLN-CLI example and created a more practical [example](https://github.com/vacp2p/zerokit/blob/vinhtc27/fix-rln-cli-configuration-handling/rln-cli/src/examples/relay.rs) for RLN usage.
+    - Worked on the stateless example for the RLN-CLI [PR](https://github.com/vacp2p/zerokit/pull/280).
+- `ift:2025q1-de-mls-multi-admin:multi-admin-rfc`
+    - Create [a notion doc](https://www.notion.so/RFCs-related-to-Ethereum-authenticated-secure-messaging-1598f96fb65c809da5f4f900ca69a29e) for de-mls RFCs organization 
+    - Create and discuss [a notion doc](https://www.notion.so/Federated-MLS-vs-Decentralized-de-MLS-1a28f96fb65c8035a972f45ff569f892) for a federated MLS vs decentralized de-MLS with the future plans for de-MLS. 
+    - Check the proto3 details from [its webpage](https://protobuf.dev/).
+- `ift:2025q1-de-mls-multi-admin:blogpost-de-mls-over-waku`
+    - Continue working with integration part [PR](https://github.com/vacp2p/vac.dev/pull/159). Described most of the message inside de-mls PoC
+- `ift:2025q1-libp2p-mix-poc:simple-gossipsub-poc`
+    - Implemented basic GossipSub Proof of Concept ([feature/mix-interface](https://github.com/vacp2p/mix/commits/feature/mix-interface))
+    - Added optional connection parameter for GossipSub ([gossipsub-mix-support](https://github.com/AkshayaMani/nim-libp2p/tree/gossipsub-mix-support/))
+        - Concluded this approach ineffective due to requirement of pre-knowing peers for passing connection.
+    - Resolved issues in ([gossipsub-mix-approach2](https://github.com/AkshayaMani/nim-libp2p/tree/gossipsub-mix-approach2/))
+        - Concluded approach unsuitable; identified need to send message only to fan-out peers in publish function
+    - Found a possible bug in `nim-libp2p` GossipSub - `IDON'TWANT` was being sent to all peers not just mesh peers 
+- `nomos:2025q1-nomos-consulting:zk-consulting-nomos-5`
+    - Finished with review by addressed Nomos' responses to [analysis of latency](https://www.notion.so/Analysis-of-latency-12f8f96fb65c81b09ba5ea1200315e97) comments.
+- `nomos:2025q1-nomos-consulting:zk-consulting-nomos-6`
+    - Finish comments for [analysis of anonymity](https://www.notion.so/Analysis-of-anonymity-12f8f96fb65c8134b3f4d9a091c02408).
+- `ift:2025q1-mds-checker:blogpost-mds`
+    - A blogpost dedicated to the MDSECheck method and the corresponding [library crate](https://crates.io/crates/mdsecheck) was in progress.
+- `ift:2025q1-zerokit-v0-7:zerokit-maintaining`
+    - `stealth-address-kit` 
+        - Fixed CI [issue](https://github.com/vacp2p/stealth-address-kit/pull/24) regarding using token  and [issue](https://github.com/vacp2p/stealth-address-kit/pull/25) about artifact upload version 
+    - `zerokit` 
+        - Published minor release v0.6.1 with wasm patch [PR](https://github.com/vacp2p/zerokit/pull/281/files)
+        - Fixed CI problem after bump dependencies [PR](https://github.com/vacp2p/zerokit/pull/283)
+        - Add more details inside serializtion [issue](https://github.com/vacp2p/zerokit/issues/279)
+        - Open [issue](https://github.com/vacp2p/zerokit/issues/282) about fully removing ark-circom dependecy 
+- `ift:2025q1-libp2p-mix-poc:ift-research-call-prep` 
+    - Prepared mixnet presentation for IFT research call
+- `ift:2025q1-rln-status-l2:exploring`   
+    - Continued learning documentation about RLN and other projects in ACZ.
 
 ### vac:nim:
 - CC in holidays
 
 ### vac:rfc:
+- `vac:rfc:ift:rfc-index-maintenance`
+    - Completed update of links for vac blog - https://github.com/vacp2p/vac.dev/pull/163
+    - Reviewed the move old Status RFC to rfc-index pr - https://github.com/vacp2p/rfc-index/pull/109
+    - Reviewed waku-mix draft spec, provided feedback - https://github.com/waku-org/specs/pull/53
+    - Checked the old Status deprecated PRs, adhering to new review: https://github.com/vacp2p/rfc-index/pull/109 
+- `vac:rfc:waku:2025q1-rfc-iteration:10/waku2`
+    - Made changes based on feedback - https://github.com/vacp2p/rfc-index/pull/125
+- `vac:rfc:waku:2025q1-rfc-iteration:33/waku2-discv5`
+    - Started this RFC update - publishing a draft PR by EOD
+- `vac:rfc:waku:2025q1-rfc-iteration:36/waku2-bindings-api`
+    - Checking Jimmy's review and publishing the new version for Hanno to review as well - https://github.com/vacp2p/rfc-index/tree/36/bindings-api-draft 
+- `vac:rfc:ift:2025q1-culture-establishment-team-communication`
+    - Preparing for next week's call with Hanno with new RFCs to take a look at - will discuss with Jimmy beforehand.
 
 ### vac:nes:
 - `state-separation-architecture-poc:se-de`
