Vac weekly update

--- a/content/updates/2025-03-17.md
+++ b/content/updates/2025-03-17.md
@@ -192,6 +192,19 @@ draft: false
     - Implements namedBin for the declarative parser https://github.com/nim-lang/nimble/pull/1362
 
 ### vac:rfc:
+- `vac:rfc:waku:2025q1-rfc-iteration`
+    - Started WAKU update for 20/TOY-ETH-PM
+    - Did another review for draft waku mix rfc - https://github.com/waku-org/specs/pull/53
+- `admin/misc`
+    - Started brainstroming for RFC workshop
+    - Worked on v1 for Q2 Commitments - ready for review: https://github.com/vacp2p/roadmap/pull/113 
+    - Wrote a blog post for the research call as well as updates to the schedule: https://forum.vac.dev/t/ift-research-call-march-12th-2025-waku-sync/451 + https://zealous-polka-dc7.notion.site/March-12th-2025-Waku-Sync-1768f96fb65c80878d48e9ef2d46dcb3 (still missing the YT recording)
+- `vac:rfc:waku:2025q1-rfc-iteration:33/waku2-discv5`
+    - Opening a draft PR next week, a bit late due to some context switching.
+- `vac:rfc:nomos:2025q1-raw-rfcs-support-data-availability:DA-current-raw-rfc-splitting`
+    - Finishing touches and opening a draft PR - ready for review next week.
+- `vac:rfc:ift:rfc-index-maintenance:maintenance`
+    - Helped Jinho with a review on one of the PRs (https://github.com/vacp2p/vac.dev/pull/167#pullrequestreview-2683857301) and reviewed another one, but also require Jimmy's opinion (https://github.com/vacp2p/vac.dev/pull/166)
 
 ### vac:sec:
 - `ift:2025q1-wallet-security:improvement-plan`
@@ -217,5 +230,4 @@ draft: false
     - Prepared question on state and discussed them.
     - Prepared PR for [sc_core usage and cryto functionality](https://github.com/vacp2p/nescience-testnet/pull/50).
     - Smart contract core library: adapted arithmetic, hash functions for zkVM.
-
 
