Vac weekly update, monthly update

--- a/content/updates/2025-03-24.md
+++ b/content/updates/2025-03-24.md
@@ -7,6 +7,7 @@ lastmod: 2025-03-24
 draft: false
 ---
 
+
 ## Vac 2025/03/24
 
 ### vac:p2p:
@@ -44,6 +45,33 @@ draft: false
     - feat(certificate): set distinguished name for issuer with peer id [#1296](https://github.com/vacp2p/nim-libp2p/pull/1296)
 
 ### vac:tke:
+- `admin`
+  - prepared and joined TKE Retrospective
+  - Discussed Q2 planning Ned and Vojtech
+- `vac:tke:codex:cdx-incentive-mechanisms:implementation-lending`
+  - met with Codex and catch up on their current state
+- `vac:tke:codex:cdx-incentive-mechanisms:lending-market`
+  - review Frederico's work
+  - read the node sale proposal in preparation of the Codex meeting
+- `vac:tke:nomos:base-econ-model:three-markets`
+  - continued implementing the Nomos Economic Model
+  - joined Nomos Planning meeting
+  - read up the latest on RDP and Blend network 
+- `vac:tke:nomos:base-econ-model:gas-and-blobs`
+  - Turn final simulation model into a dasboard
+- `vac:tke:nomos:base-econ-model:nms-money`
+  - continuing research, producing a report outlining the research direction and important considerations (WIP from last week)
+  - read up the latest on RDP and Blend network 
+- `vac:tke:ift:catsfishing:simulations-and-release:tokenomics`
+  - Finalize doc on token (pre) sale mechanisms
+- `vac:tke:ift:tokenomics-research-forum:mev`
+  - look for additional materials on L2 MEV and add to slides if interesting 
+  - joined Research Call and finalized writing the report
+  - Gave another pass to this and presented
+- `vac:tke:ift:tokenomics-research-forum:tke-dashboard`
+  - Prep of  dashboards to be sent to Frederico
+  - organized the TKE repository
+  - continued merging dashboards into the central one
 
 
 ### vac:qa:
