vac weekly update

--- a/content/monthly/2025-03.md
+++ b/content/monthly/2025-03.md
@@ -278,9 +278,30 @@ draft: false
 
 ### SC
 #### highlights
+- Collaborated with an external team (Based) for the first time, to offer Smart Contract reviews
+- Released a production ready version of the staking protocol on SN Sepolia
+- LearnUp session about EIP-7702
 #### report
-
-
+- `admin/misc`
+    - Reviewed Smart contracts of external Based team
+    - **Completed tasks**
+        - This was a task for Q2 but had a bit of higher priority
+    - **Deliverables**
+        - [Feedback document](https://notes.status.im/s/As1eiFUOK)
+- `ift:2025q1-sc-learnup-sessions:2025-03`
+    - Ran and recorded a session on EIP-7702, which allows native smart accounts
+    - **Relevant links**
+        - [Video recording](https://www.notion.so/EIP-7702-Account-abstraction-1c48f96fb65c80daa349fa27f33410bc)
+    - **Completed tasks**
+        - `ift:2025q1-sc-learnup-sessions:2025-03`
+    - **Deliverables**
+        - [Video recording - LearnUp Session](https://www.notion.so/EIP-7702-Account-abstraction-1c48f96fb65c80daa349fa27f33410bc)
+- `status:2025q1-staking-protocol-refinement:status-network-testnet-deployment`
+    - Deployed staking protocol on SN Sepolia
+    - **Relevant links**
+        - [Deployment addresses](https://www.notion.so/Contract-Deployment-Addresses-d6dd98b1b4f6461d82eec6ab18b852c8?pvs=4#1a88f96fb65c8066a73af9fcaf9d620e)
+    - **Deliverables**
+        - See contract addresses
 
 ### ACZ
 #### highlights 
