vac weekly update

--- a/content/monthly/2025-03.md
+++ b/content/monthly/2025-03.md
@@ -10,7 +10,96 @@ draft: false
 
 ### P2P
 #### highlights
+- Release v1.9.0
+- QUIC support in nim-libp2p
+- GossipSub v1.4 proposal
+- EthShadow simulations improved, nimbus integration ongoing.
+- Completed work on adding raised exceptions to `async` functions
+- Presentations at virtual libp2p day.
+
 #### report
+- `ift:2025q1-gossipsub-perf-improvements`
+    - Overview:
+        - EthShadow simulations improved, nimbus integration ongoing.
+    - Delivered Deliverables:
+        - Prepared talk for virtual libp2p day on GossipSub v1.4.
+        - Created [PR for multi-test node simulation](https://github.com/vacp2p/dst-gossipsub-test-node/pull/6).
+        - Performance comparisons for GossipSub 1.2, 1.4, and 2.0.
+        - Nimbus + EthShadow integration in progress
+        - EthResearch forum post on v1.4 upcoming.
+        - Stagger send paper ready fo submission
+        - IMRECEIVING paper is ready for review	
+
+- `ift:2025q1-nimlibp2p-wrapping-ngtcp2:tls_handshake`
+    - Overview:
+        - Finalized and merged QUIC support into nim-libp2p, achieving interop with other implementations
+    - Delivered Deliverables:
+        - [nim-quic#64](https://github.com/vacp2p/nim-quic/pull/64) - handle client handshake failures.
+        - [nim-libp2p#1301](https://github.com/vacp2p/nim-libp2p/pull/1301) - feat: `withQuicTransport`.
+        - [nim-libp2p#1298](https://github.com/vacp2p/nim-libp2p/pull/1298) - refactor: switch from mbedTLS to OpenSSL.
+        - [nim-quic#c3bf40](https://github.com/vacp2p/nim-quic/commit/c3bf40344bb03f692ba7b36e60625678a0de3c8f) - fix: ALPN FFI.
+        - [nim-quic#62](https://github.com/vacp2p/nim-quic/pull/62) - fix: connection timeouts
+        - [nim-quic#1283](https://github.com/vacp2p/nim-libp2p/pull/1283) feat: use libp2p alpn, remove hardcoded port number and fix certificate generation
+        - [nim-libp2p#1265](https://github.com/vacp2p/nim-libp2p/pull/1265) feat: quic 
+
+- `ift:2025q1-nimlibp2p-wrapping-ngtcp2:certificate_validation`
+    - Overview:
+        - Certificate validation rework complete including libp2p specs update
+    - Delivered Deliverables:
+        - [nim-libp2p#1299](https://github.com/vacp2p/nim-libp2p/pull/1299) - feat(certificate): add date verification
+        - [nim-libp2p#1297](https://github.com/vacp2p/nim-libp2p/pull/1297) - chore(quic): add tests with invalid certs
+        - [libp2p/specs#665](https://github.com/libp2p/specs/pull/665) - feat: update certificate test vectors.
+        - [nim-libp2p#1292](https://github.com/vacp2p/nim-libp2p/pull/1292) - feat: X.509 certificate validation
+        - [nim-libp2p#1295](https://github.com/vacp2p/nim-libp2p/pull/1295) - feat(quic): tls certificate verify 
+        - [nim-libp2p#1296](https://github.com/vacp2p/nim-libp2p/pull/1296) feat(certificate): set distinguished name for issuer with peer id
+
+- `vac:p2p:ift:2025q1-nimlibp2p-webtransport:requirements`
+    - Overview:
+        - Documented the requirements for adding WebTransport support to nim-libp2p
+    - Delivered Deliverables:
+        - [Webtransport Requirements](https://www.notion.so/Webtransport-Requirements-1b38f96fb65c80728e20f2fc34e24cee?pvs=4)
+
+- `ift:2025q1-nimlibp2p-maintenance`
+    - Overview
+        - Release [v1.9.0](https://github.com/vacp2p/nim-libp2p/releases/tag/v1.9.0)
+        - Completed work on adding raised exceptions to `async` functions
+        - Minor CI updates
+    - Delivered Deliverables:
+        - [nim-libp2p#1284](https://github.com/vacp2p/nim-libp2p/pull/1284) - chore: specify exceptions in try statement 
+        - [nim-libp2p#1274](https://github.com/vacp2p/nim-libp2p/pull/1274) - chore(relay): specify raised exceptions 
+        - [nim-libp2p#1275](https://github.com/vacp2p/nim-libp2p/pull/1275) - chore(protocol): handler to propagate CancelledError 
+        - [nim-libp2p#1276](https://github.com/vacp2p/nim-libp2p/pull/1276) - chore(connmanager): propagate CancelledError 
+        - [nim-libp2p#1288](https://github.com/vacp2p/nim-libp2p/pull/1288) - chore: use token per repo in autobump task
+        - [nimbus-eth2#7014](https://github.com/status-im/nimbus-eth2/pull/7014) - chore(ci): nim-libp2p master auto bump
+        - [nwaku#3327](https://github.com/waku-org/nwaku/pull/3327) - chore(ci): waku nim-libp2p master auto bump
+        - [nim-libp2p#1281](https://github.com/vacp2p/nim-libp2p/pull/1281) chore(ci): Remove Appveyor config
+  
+- `ift:2025q1-nimlibp2p-wrapping-ngtcp2:improve_quic`
+    - Overview:
+        - Modified nim-quic to allow passing a custom RNG from nim-libp2p
+    - Deliverables:
+        - [nim-quic#60](https://github.com/vacp2p/nim-quic/pull/60) - Switch RNG to BearSSL.
+
+- `acz:2025q1-acz-consulting:libp2p-mix-consulting`
+    - Overview:
+        - Troubleshot mix pubsub stream reliability, recommended aggressive stream closing.
+        - Discussions around using custom connections in pubsub
+        - Assist in fixing compilation issues
+
+- `acz:2025q1-acz-consulting:de-mls-consulting`
+    - Overview:
+        - Debugged double-message issue, confirmed [known issue](https://github.com/waku-org/nwaku/issues/3246).
+        - Investigate cause behind segfault in de-mls (Fixed by nwaku team in [waku-rust-bindings#116](https://github.com/waku-org/waku-rust-bindings/pull/116))
+
+- `misc/admin`
+    - Overview:
+        - 2 presentations shown at virtual libp2p day
+        - Document nim-libp2p release procedure
+    - Delivered Deliverables:
+        - [Gossipsub 1.3 Proposal](https://www.youtube.com/watch?v=w7tDz0a41Bg)
+        - [nim-libp2p Update & Roadmap](https://www.youtube.com/watch?v=148O0vz8KfU)
+        - [release procedure](https://www.notion.so/Release-procedure-1b58f96fb65c80659952c01f4ad366d0)
+
 
 ### Tokenomics
 #### highlights
