--- a/content/updates/2025-04-14.md
+++ b/content/updates/2025-04-14.md
@@ -7,6 +7,7 @@ lastmod: 2025-04-14
 draft: false
 ---
 
+
 ## Vac 2025/04/14
 
 ### vac:p2p:
@@ -32,8 +33,68 @@ draft: false
     - reading about [AutoTLS](https://blog.libp2p.io/autotls/)
 
 ### vac:tke:
+- `admin`
+  - reorganized our research page on Nomos (as per Nomos team request)
+  - 1 CC day off - sickness
+- `vac:tke:codex:insurance:tool-monitoring`
+  - improved the monitoring of the CDX tool
+- `vac:tke:nomos:macroeconomy:revision-blockspace`
+  - addressed feedback on the "Blockspace Market for Nomos"
+  - reviewed Frederico's "Blockspace Market for Nomos".
+  - Researched and see how else to help
+- `vac:tke:nomos:macroeconomy::preliminary-block-rewards`
+  - restructured the Nomos Economic Model tool
+  - researched how other chains define their block rewards
+- `vac:tke:nomos:macroeconomy:network-state-infra`
+  - continuing going through resources on NSs, focus on forking, monetary sovereignty
+- `vac:tke:ift:tokenomics-research-forum:tke-dashboard`
+  - addressed team's feedback about tools
+- `vac:tke:ift:tokenomics-research-forum:token-sales-opt`
+  - concluded the study of token sales as an optimization problem
+  - presented it in our Research Call
+  - review work on optimization problem
+- `vac:tke:status:karma-incentives:karma-params`
+  - working on a strategy and a proposal for season 1
+  - - Review work from Martin + help out here
+- `vac:tke:ift:catsfishing:whitepaper`
+  - Created FAQ on tokenomics issues
+  - Chatted with Noelle about outstanding legal issues
+- `vac:tke:ift:tokenomics-research-forum:minting-control`
+  - Worked on Optimal Control and Monetary Policy
 
 ### vac:qa:
+- `ift:2025q2-qa-rfc-sync-waku:nwaku`
+	- Relay [done](https://www.notion.so/Nwaku-Relay-1ce8f96fb65c803a90f5c25076206ee7)
+	- Filter [done](https://www.notion.so/Nwaku-Filter-1d18f96fb65c80b1a465d1bd022cd3f9)
+	- Only minor inconsistencies found for both protocols. RFC team to review it
+- `waku:2025q2-status-go-functional-testing:chat-actions-tests`
+	- Enabled light client mode for [waku functional tests](https://github.com/status-im/status-go/pull/6518/files)
+- `waku:2025q2-interop-testing:jswaku-filter-hardening`
+	- Agreed with js-waku devs to create a new package inside js-waku. This will enable us to reuse a lot of code
+	- Started working on that
+- `nomos:2025q2-da-testing:protocol-api-compatibility`
+    - Test/protocol API compatibility
+    [PR 14 - in progress](https://github.com/logos-co/nomos-e2e-tests/pull/14) - check with devs optimal 4 node cluster config
+- `nomos:2025q2-e2e-testing:maintenance`
+    - chore: Multiplatform testnet image for debugging
+    [PR 1212 - merged](https://github.com/logos-co/nomos/pull/1212) - PR accepted after update
+- `waku:2025q2-interop-testing:maintenance`
+    - [Enabled RLN tests](https://github.com/waku-org/waku-interop-tests/pull/112) - [Issue 3313](https://github.com/waku-org/nwaku/issues/3313) resolved
+- `waku:2025q2-waku-go-bindings-testing:maintenance` 
+    - Found 2 issues in go-bindings [65](https://github.com/waku-org/waku-go-bindings/issues/65) and [64](https://github.com/waku-org/waku-go-bindings/issues/64) 
+    - Re-test again after Gabriel's Fix 
+    - Increase endurance tests iterations after the fix in [PR](https://github.com/waku-org/waku-go-bindings/pull/62)
+- `vac:qa:waku:2025q2-waku-sync-testing:unit` (15%)
+    - Prepared [sheet](https://docs.google.com/spreadsheets/d/1Qj5LMyWR-ILA2wqd4eGe7j_V311QonZJ0LqnaWAJxMM/edit?gid=293767216#gid=293767216)  with missing coverage for unit test and review it with Simon 
+    - Went through NIM syntax again to prepare for task 
+    - Add new tests to [PR](https://github.com/waku-org/nwaku/pull/3372)
+    - Worked on compilation errors at existing tests that block execution 
+- `vac:2025q2-nim-libp2p-testing:gossipsub-extended`
+    - went through existing GossipSub tests 
+    - revived stale Alex's PR: [test(gossipsub): message propagation](https://github.com/vacp2p/nim-libp2p/pull/1184), updated it and made sure it builds in CI
+    - went through 2 rounds of reviews and refactoring to address all the comments 
+- `admin/misc`
+	- Added waku-sync commitment and js-waku filter hardening task
 
 ### vac:dst:
 - `vac:dst:waku:2025q2-waku-tooling:general-tooling`
@@ -63,6 +124,22 @@ draft: false
         - Can integrate partially with Prefect
 
 ### vac:sc:
+- `status:2025q2-sn-native-bridge-yield-bearing-module:research-design`
+    - Further analysis of Blast/Linea bridges with yield support
+    - Architecture planning and first implementation with team
+    - Working on architecture visual for Linea 
+    - Reviewed pool based staking contract as possible feature for yield bridge
+    - study blast implementation + start simple implementation in Linea's bridge contracts
+    - trace and document Linea's contracts txs for bridged ETH
+    - research how to port ETHYieldManager to Lineas's contracts
+    - created documentation on blast txs tracing https://notes.status.im/9DmbBneFTbGtOEBYU5W0Dg?view
+    - first simple implementation of the yield manager +  bridge forwarding funds to it     https://github.com/vacp2p/linea-monorepo/pull/2    
+    - created doc to trace Blast's Yield Manager https://notes.status.im/dAJPbmegSpKsBgzlW4QbwA?view
+- `codex/2025q2-vault-integration:review-vault-contract`
+    - Reviewed the Codex vault contract
+    - Presented learnings in team meeting
+- `status:2025q2-maintaining-status-contracts`
+    - Looking into bridging SNT to Binance/Polygon
 
 ### vac:acz:
 - `ift:2025q2-zerokit:wasm-implementation`
@@ -152,4 +229,20 @@ draft: false
     - Started expansion of POC to reflect new items in App Catalogue
 
 ### vac:nes:
+- `state-separation-architecture-poc:sc-prog`
+    - Worked on public inputs and state access, and private inputs (UTXOs, secrets) and confidential state.
+    - Worked on integration of NSSA SDK with RISC0 zkVM (consistency of execution).
+    - Drafted public/private states and SDK integration.
+    - Reviewed docs and answered to comments.
+    - Reviewed implementation code.
+    - Prepared a document discussing [selective privacy function execution](https://www.notion.so/Selective-privacy-function-execution-1d18f96fb65c809b970cf15bb5d50534); varied execution types for a public function.
+    - Updated [execution consistency mechanisms](https://www.notion.so/Execution-consistency-mechanisms-1cb8f96fb65c80eca438e78636671a92) to address different use-cases.
+    - Work on [Privacy types of calling function](https://www.notion.so/Privacy-types-of-calling-function-1ca8f96fb65c8022ba36e1918afec308) in terms of verification parameters and how can we call another function or contract. 
+
+Last week:
+- `state-separation-architecture-poc:sc-public`
+    - Finish public state provability work [PR](https://github.com/vacp2p/nescience-testnet/pull/57).
+    - Testing of serialization fix.
+    - Implemented public smart contract sontext provability.
+    - Implemented bytewise stable serialization for public smart contract context [merge request](https://github.com/vacp2p/nescience-testnet/pull/58).
 
